--- a/Dockerfile.dind
+++ b/Dockerfile.dind
@@ -58,7 +58,12 @@ RUN wget -O /app/ui/01-rbd-operator.yml "https://get.rainbond.com/01-rbd-operato
     python manage.py collectstatic --noinput --ignore weavescope-src --ignore drf-yasg  --ignore rest_framework && \
     echo "deb http://archive.debian.org/debian/ stretch main" > /etc/apt/sources.list && \
 	echo "deb http://archive.debian.org/debian-security stretch/updates main" >> /etc/apt/sources.list && \
-    wget https://rainbond-pkg.oss-cn-shanghai.aliyuncs.com/upx/upx-4.0.2-arm64_linux/upx && chmod +x upx && mv upx /usr/local/bin/upx && upx --best --lzma /app/ui/log
+    if [ "${ARCH}" = "arm64" ]; then \
+        wget https://rainbond-pkg.oss-cn-shanghai.aliyuncs.com/upx/upx-4.0.2-arm64_linux/upx && chmod +x upx && mv upx /usr/local/bin/upx \
+    else \
+        apk add upx \
+    fi && \
+    upx --best --lzma /app/ui/log
 
 # build console image
 FROM rainbond/python:3.6-slim-stretch
