fix: gateway unavailable in dind environment
In a dind environment, if a Service of type LoadBalance is created, all gateway rules will not take effect. 

This is due to the servicelb hijacking traffic that comes with K3s.

--- a/dind.conf
+++ b/dind.conf
@@ -12,7 +12,7 @@
 
 [program:k3s]
 directory=/app/
-command=/usr/local/bin/k3s server --disable traefik --node-name node --data-dir /app/data/k3s --pause-image rainbond/mirrored-pause:3.1
+command=/usr/local/bin/k3s server --disable servicelb --disable traefik --node-name node --data-dir /app/data/k3s --pause-image rainbond/mirrored-pause:3.1
 user=root
 autostart=false
 autorestart=true
