--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -6,7 +6,7 @@ RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
 	echo "deb http://archive.debian.org/debian/ stretch main" > /etc/apt/sources.list && \
 	echo "deb http://archive.debian.org/debian-security stretch/updates main" >> /etc/apt/sources.list && \
 	apt-get update && apt-get --no-install-recommends install -y \
-	curl supervisor iptables net-tools sqlite3 default-libmysqlclient-dev && \
+	curl supervisor iptables mysql-client net-tools sqlite3 default-libmysqlclient-dev && \
 	rm -rf /var/lib/apt/lists/*
 
 EXPOSE 7070
