--- a/Dockerfile.allinone
+++ b/Dockerfile.allinone
@@ -51,6 +51,7 @@ FROM rainbond/python:3.6-slim-stretch
 ARG RELEASE_DESC=
 ARG VERSION
 ARG ARCH=amd64
+ARG INSTALL_VERSION
 
 COPY --from=builder /go/src/goodrain.com/cloud-adaptor/chart /app/chart
 COPY --from=builder /cloud-adaptor /app/cloudadaptor
@@ -79,8 +80,8 @@ ENV CHART_PATH=/app/chart
 ENV CONFIG_DIR=/app/data/cloudadaptor
 ENV HELM_PATH=/usr/local/bin/helm
 ENV MYSQL_DB=console
-ENV RAINBOND_VERSION=$VERSION
-ENV OPERATOR_VERSION=$VERSION
+ENV RAINBOND_VERSION=$INSTALL_VERSION
+ENV OPERATOR_VERSION=$INSTALL_VERSION
 
 VOLUME /app/data
 VOLUME /app/logs
