merge: merge api gateway

--- a/requirements.txt
+++ b/requirements.txt
@@ -36,5 +36,6 @@ enum34==1.1.6
 validators==0.14.2
 deprecated==1.2.10
 redis==3.5.3
-cryptography==3.2
--e git+https://gitee.com/rainbond/appstore-sdk-python.git@python3#egg=openapi_client
+cryptography==3.3
+-e git+http://pull-code:gr123465!!@git.goodrain.com/goodrain/enterprise-server-python.git#egg=enterprise-server-client
+-e git+https://gitee.com/rainbond/appstore-sdk-python@python3#egg=openapi-client
