--- a/requirements.txt
+++ b/requirements.txt
@@ -37,5 +37,4 @@ validators==0.14.2
 deprecated==1.2.10
 redis==3.5.3
 cryptography==3.3
--e git+http://pull-code:gr123465!!@git.goodrain.com/goodrain/enterprise-server-python.git#egg=enterprise-server-client
--e git+https://gitee.com/rainbond/appstore-sdk-python@python3#egg=openapi-client
+-e git+https://gitee.com/rainbond/appstore-sdk-python.git@python3#egg=openapi_client
