--- a/Dockerfile.allinone
+++ b/Dockerfile.allinone
@@ -1,26 +1,6 @@
 ARG IMAGE_NAMESPACE=rainbond
 ARG VERSION=V5.4-dev
 
-FROM rainbond/golang-gcc-buildstack:1.17-alpine3.16 as builder
-ARG ADAPTOR_BRANCH=v5.7.1-release
-ARG GOPROXY
-ARG GITPROXY
-ARG LDFLAGS="-w -s -linkmode external -extldflags '-static'"
-ARG ARCH=amd64
-
-ENV GOPROXY=${GOPROXY}
-ENV CGO_ENABLED=1
-ENV GOPATH=/go
-
-RUN if [ ${ARCH} = "arm64" ] || [ ${ARCH} = "aarch64" ]; then \
-        wget https://pkg.rainbond.com/upx/upx-4.0.2-arm64_linux/upx && chmod +x upx && mv upx /usr/local/bin/upx; \
-    else \
-        apk add upx; \
-    fi && \
-    apk add git && git clone -b ${ADAPTOR_BRANCH} --depth=1 ${GITPROXY}https://github.com/goodrain/cloud-adaptor /go/src/goodrain.com/cloud-adaptor
-WORKDIR /go/src/goodrain.com/cloud-adaptor/
-RUN go build -ldflags "$LDFLAGS" -o /cloud-adaptor $PWD/cmd/cloud-adaptor && upx --best --lzma /cloud-adaptor && chmod +x /cloud-adaptor
-
 # build ui
 FROM ${IMAGE_NAMESPACE}/rainbond-ui:${VERSION} AS ui
 
@@ -47,20 +27,25 @@ RUN python -m venv --copies /app/ui/py_venv && \
     python manage.py collectstatic --noinput --ignore weavescope-src --ignore drf-yasg --ignore rest_framework
 
 # build console image
-FROM rainbond/python:3.6-slim-stretch
+FROM python:3.6-slim-stretch
+
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
+	echo 'Asia/Shanghai' >/etc/timezone && \
+	echo "deb http://archive.debian.org/debian/ stretch main" > /etc/apt/sources.list && \
+	echo "deb http://archive.debian.org/debian-security stretch/updates main" >> /etc/apt/sources.list && \
+	apt-get update && apt-get --no-install-recommends install -y \
+	curl mysql-client sqlite3 default-libmysqlclient-dev && \
+	rm -rf /var/lib/apt/lists/*
+
 ARG RELEASE_DESC=
 ARG VERSION
 ARG ARCH=amd64
 ARG INSTALL_VERSION
 
-COPY --from=builder /go/src/goodrain.com/cloud-adaptor/chart /app/chart
-COPY --from=builder /cloud-adaptor /app/cloudadaptor
 COPY --from=build-console /app/ui /app/ui
 WORKDIR /app/ui
 
 RUN mkdir -p /app/logs /app/data /root/.ssh && \
-    mv /app/ui/supervisord.conf /etc/supervisor/supervisord.conf && \
-    mv /app/ui/rainbond.conf /etc/supervisor/conf.d/rainbond.conf && \
     apt-get update && apt-get install wget -y && \
     if [ ${ARCH} = "arm64" ] || [ ${ARCH} = "aarch64" ]; then \
         wget -O /usr/local/bin/helm "https://pkg.goodrain.com/pkg/helm/v3.10.1/helm-arm64" && chmod +x /usr/local/bin/helm; \
@@ -74,17 +59,11 @@ ENV PORT 7070
 ENV IS_OPEN_API=true
 ENV RELEASE_DESC=${RELEASE_DESC}
 ENV HOME_DIR=/app
-# cloud adaptor
-ENV DB_PATH=/app/data/cloudadaptor
-ENV CHART_PATH=/app/chart
-ENV CONFIG_DIR=/app/data/cloudadaptor
-ENV HELM_PATH=/usr/local/bin/helm
-ENV MYSQL_DB=console
-ENV RAINBOND_VERSION=$INSTALL_VERSION
-ENV OPERATOR_VERSION=$INSTALL_VERSION
 
 VOLUME /app/data
 VOLUME /app/logs
 VOLUME /root/.ssh
 
-CMD [ "/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf" ]
+EXPOSE 7070
+
+CMD [ "bash", "/app/ui/entrypoint.sh" ]
