--- a/Dockerfile.allinone
+++ b/Dockerfile.allinone
@@ -26,16 +26,10 @@ RUN python -m venv --copies /app/ui/py_venv && \
     pip install -r requirements.txt $PYTHONPROXY && \
     python manage.py collectstatic --noinput --ignore weavescope-src --ignore drf-yasg --ignore rest_framework
 
+RUN git clone --depth=1 -b V6.0 https://github.com/goodrain/rainbond-chart /app/ui/rainbond-chart
+
 # build console image
 FROM python:3.6-slim-stretch
-
-RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
-	echo 'Asia/Shanghai' >/etc/timezone && \
-	echo "deb http://archive.debian.org/debian/ stretch main" > /etc/apt/sources.list && \
-	echo "deb http://archive.debian.org/debian-security stretch/updates main" >> /etc/apt/sources.list && \
-	apt-get update && apt-get --no-install-recommends install -y \
-	curl mysql-client sqlite3 default-libmysqlclient-dev && \
-	rm -rf /var/lib/apt/lists/*
 
 ARG RELEASE_DESC=
 ARG VERSION
@@ -45,14 +39,19 @@ ARG INSTALL_VERSION
 COPY --from=build-console /app/ui /app/ui
 WORKDIR /app/ui
 
-RUN mkdir -p /app/logs /app/data /root/.ssh && \
-    apt-get update && apt-get install wget -y && \
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
+	echo 'Asia/Shanghai' >/etc/timezone && \
+	echo "deb http://archive.debian.org/debian/ stretch main" > /etc/apt/sources.list && \
+	echo "deb http://archive.debian.org/debian-security stretch/updates main" >> /etc/apt/sources.list && \
+	apt-get update && apt-get --no-install-recommends install -y \
+	curl mysql-client sqlite3 default-libmysqlclient-dev && \
     if [ ${ARCH} = "arm64" ] || [ ${ARCH} = "aarch64" ]; then \
-        wget -O /usr/local/bin/helm "https://pkg.goodrain.com/pkg/helm/v3.10.1/helm-arm64" && chmod +x /usr/local/bin/helm; \
+        curl "https://pkg.goodrain.com/pkg/helm/v3.10.1/helm-arm64" -o /usr/local/bin/helm && chmod +x /usr/local/bin/helm; \
     else \
-        wget -O /usr/local/bin/helm "https://pkg.goodrain.com/pkg/helm/v3.10.1/helm" && chmod +x /usr/local/bin/helm; \
+        curl "https://pkg.goodrain.com/pkg/helm/v3.10.1/helm" -o /usr/local/bin/helm && chmod +x /usr/local/bin/helm; \
     fi && \
-    rm -rf /var/lib/apt/lists/*
+    mkdir -p /app/logs /app/data && \
+	rm -rf /var/lib/apt/lists/*
 
 ENV PATH=/app/ui/py_venv/bin:$PATH
 ENV PORT 7070
@@ -62,7 +61,6 @@ ENV HOME_DIR=/app
 
 VOLUME /app/data
 VOLUME /app/logs
-VOLUME /root/.ssh
 
 EXPOSE 7070
 
