--- a/Dockerfile.allinone
+++ b/Dockerfile.allinone
@@ -1,5 +1,5 @@
 ARG IMAGE_NAMESPACE=rainbond
-ARG VERSION=V5.4-dev
+ARG VERSION=v6.0.0-release
 
 # build ui
 FROM ${IMAGE_NAMESPACE}/rainbond-ui:${VERSION} AS ui
