--- a/Dockerfile.allinone
+++ b/Dockerfile.allinone
@@ -16,6 +16,7 @@ RUN mv /dist/index.html /app/ui/www/templates/index.html && \
 FROM python:3.6-stretch AS build-console
 ARG PYTHONPROXY
 ARG TARGETARCH
+ARG VERSION
 
 COPY --from=ui /app/ui /app/ui
 WORKDIR /app/ui
@@ -27,6 +28,7 @@ RUN python -m venv --copies /app/ui/py_venv && \
     python manage.py collectstatic --noinput --ignore weavescope-src --ignore drf-yasg --ignore rest_framework
 
 RUN git clone --depth=1 -b main https://github.com/goodrain/rainbond-chart /app/ui/rainbond-chart && \
+    sed -i "s/installVersion: .*/installVersion: $VERSION/" /app/ui/rainbond-chart/values.yaml && \
     wget https://get.helm.sh/helm-v3.16.2-linux-$TARGETARCH.tar.gz -O /tmp/helm.tar.gz && \
     tar -zxvf /tmp/helm.tar.gz -C /tmp && \
     mv /tmp/linux-$TARGETARCH/helm /tmp && \
