feat: change dockerfile name and replace ico
Signed-off-by: Qi Zhang <smallqi1@163.com>

--- a/.github/workflows/commit-ci-build.yml
+++ b/.github/workflows/commit-ci-build.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           platforms: linux/amd64
           context: .
-          file: ./Dockerfile.allinone
+          file: ./Dockerfile
           push: false
           tags: |
             rainbond/rainbond:dev-allinone
