--- a/.github/workflows/pr-ci-build.yml
+++ b/.github/workflows/pr-ci-build.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           platforms: linux/amd64
           context: .
-          file: ./Dockerfile.allinone
+          file: ./Dockerfile
           push: false
           tags: |
             rainbond/rainbond:dev-allinone
