--- a/requirements.txt
+++ b/requirements.txt
@@ -41,4 +41,5 @@ kubernetes==30.1.0
 django-postgrespool2==2.0.5
 ruamel.yaml==0.15.100
 prometheus-api-client==0.5.1
+volcengine-python-sdk==1.0.126
 -e git+https://gitee.com/rainbond/appstore-sdk-python.git@python3#egg=openapi_client
