--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 Django==2.2
-mysqlclient==2.1.1
 django-crispy-forms==1.12.0
 addict==0.4.0
 gunicorn==19.10.0
@@ -42,5 +41,6 @@ ruamel.yaml==0.15.100
 prometheus-api-client==0.5.1
 volcengine-python-sdk==1.0.126
 alibabacloud_dysmsapi20170525
+alibabacloud-tea-openapi==0.3.12
 volcengine
 -e git+https://gitee.com/zhangsetsail/appstore-sdk-python.git@python3#egg=openapi_client
