fix: send aliyun sms failure
Signed-off-by: 张启航 <101104760+ZhangSetSail@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -42,5 +42,6 @@ ruamel.yaml==0.15.100
 prometheus-api-client==0.5.1
 volcengine-python-sdk==1.0.126
 alibabacloud_dysmsapi20170525
+alibabacloud-tea-openapi==0.3.12
 volcengine
 -e git+https://gitee.com/zhangsetsail/appstore-sdk-python.git@python3#egg=openapi_client
