--- a/Dockerfile.quick
+++ b/Dockerfile.quick
@@ -5,6 +5,7 @@ COPY console/services/auth/__init__.py /app/ui/console/services/auth/__init__.py
 COPY goodrain_web/settings.py /app/ui/goodrain_web/settings.py
 COPY console/services/auth/authentication.py /app/ui/console/services/auth/authentication.py
 COPY console/views/base.py /app/ui/console/views/base.py
-COPY console/views/base.py /app/ui/console/views/base.py
+COPY console/services/user_services.py /app/ui/console/services/user_services.py
+COPY openapi/ /app/ui/openapi/
 # Ensure we don't accidentally overwrite the venv if we had one locally (we don't), 
 # but effectively updating the definition of the app.
