--- a/Dockerfile.quick
+++ b/Dockerfile.quick
@@ -7,5 +7,6 @@ COPY console/services/auth/authentication.py /app/ui/console/services/auth/authe
 COPY console/views/base.py /app/ui/console/views/base.py
 COPY console/services/user_services.py /app/ui/console/services/user_services.py
 COPY openapi/ /app/ui/openapi/
+COPY console/views/logos.py /app/ui/console/views/logos.py
 # Ensure we don't accidentally overwrite the venv if we had one locally (we don't), 
 # but effectively updating the definition of the app.
